--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Self Directed FD Starter</title>
+    <title>Sweater Weather</title>
   </head>
   <body>
     <header>
-      <a href=""><h1>SweaterWeather</h1></a>
-      <a href="#">Login</a>
-      <a href="#">Register</a>
+      <a href="#" id="home"><h1><span class="neon-blue">Sweater</span>Weather</h1></a>
+      <nav>
+        <a href="#" id="login">Login</a>
+        <a href="#" id="register">Register</a>
+      </nav>
     </header>
     <div id="main">
-
+      <h2>Please search for a location's weather!</h2><input class='input-field' type='text' placeholder='Ex: New York, NY' id='location'><input id='search' class='btn' type='submit' value='Search'>
     </div>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
     </script>
