Add styling for initial homepage setup

--- a/index.html
+++ b/index.html
@@ -3,17 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Sweater Weather</title>
+    <link rel="stylesheet" type="text/css" href="/lib/styles.css" />
   </head>
   <body>
     <header>
-      <a href="#" id="home"><h1><span class="neon-blue">Sweater</span>Weather</h1></a>
-      <nav>
-        <a href="#" id="login">Login</a>
-        <a href="#" id="register">Register</a>
-      </nav>
+      <div class="container">
+        <div class="spacer">
+          <a href="#" id="home"><h1><span class="cyan">Sweater</span>Weather</h1></a>
+          <nav>
+            <a href="#" id="login">Login</a>
+            <a href="#" id="register">Register</a>
+          </nav>
+        </div>
+      </div>
     </header>
     <div id="main">
-      <h2>Please search for a location's weather!</h2><input class='input-field' type='text' placeholder='Ex: New York, NY' id='location'><input id='search' class='btn' type='submit' value='Search'>
+      <div class="container">
+        <div class="search">
+          <h2>Search for Weather!</h2>
+          <input class='input-field' type='text' placeholder='Ex: New York, NY' id='location'>
+          <input id='search' class='btn' type='submit' value='Search'>
+        </div>
+      </div>
     </div>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
     </script>
