Wip, a failing jquery post request

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <div class="spacer">
           <a href="#" id="home"><h1><span class="cyan">Sweater</span>Weather</h1></a>
           <nav>
-            <a href="#" id="login">Login</a>
-            <a href="#" id="register">Register</a>
+            <a href="#" id="register">Login</a>
+            <a href="#" id="logout">Logout</a>
           </nav>
         </div>
       </div>
     </header>
     <div class="container">
+      <a href="#" id="favorite">Add Favorite</a>
       <div id="main">
         <div class="search">
           <h2>Search for Weather!</h2>
